tests/invalid/bug113.err_exp
bug113.m:019: In module `bug113':
bug113.m:019:   warning: module [38;5;87m`list'[39;49m is imported in the interface, but it is
bug113.m:019:   [38;5;203mnot used in the interface.[39;49m
bug113.m:032: Error: clause for function [38;5;87m`new'/1[39;49m [38;5;203mwithout[39;49m a corresponding
bug113.m:032:   `:- func' declaration.
bug113.m:032: Inferred :- func new(T1) = T2.
bug113.m:034: Error: clause for function [38;5;87m`new'/2[39;49m [38;5;203mwithout[39;49m a corresponding
bug113.m:034:   `:- func' declaration.
bug113.m:036: In clause for function `new'/2:
bug113.m:036:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`throw_bitmap_error'/1.[39;49m
bug113.m:036:   [38;5;226m(Did you mean `bitmap_error'?)[39;49m
bug113.m:038: In clause for function `new'/2:
bug113.m:038:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`initializer'/1.[39;49m
bug113.m:039: In clause for function `new'/2:
bug113.m:039:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`initialize_bitmap'/3.[39;49m
bug113.m:039: In clause for function `new'/2:
bug113.m:039:   in argument 1 of functor `initialize_bitmap/3':
bug113.m:039:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`allocate_bitmap'/1.[39;49m
bug113.m:040: In clause for function `new'/2:
bug113.m:040:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`clear_filler_bits'/1.[39;49m
